--- a/nextjs-ssr/home/package.json
+++ b/nextjs-ssr/home/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "rm -rf .next; next dev -p 3001",
-    "build": "next build",
-    "start": "NODE_ENV=production next start -p 3001"
+    "dev": "rm -rf .next;NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 3001",
+    "build": "NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
+    "start": "NEXT_PRIVATE_LOCAL_WEBPACK=true NODE_ENV=production next start -p 3001"
   },
   "dependencies": {
     "@module-federation/nextjs-mf": "^8.0.1-4",
