--- a/nextjs-ssr/home/package.json
+++ b/nextjs-ssr/home/package.json
@@ -8,7 +8,7 @@
     "start": "NEXT_PRIVATE_LOCAL_WEBPACK=true NODE_ENV=production next start -p 3001"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^8.0.1-4",
+    "@module-federation/nextjs-mf": "^8.1.0-canary.1",
     "lodash": "4.17.21",
     "next": "^13.5.4",
     "react": "^18.2.0",
