--- a/quasar-cli-vue3-webpack-javascript/app-general/package.json
+++ b/quasar-cli-vue3-webpack-javascript/app-general/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "setup-env:dev": "shx cp -r envs/env.dev.json envs/env.json",
+    "setup-env:prod": "shx cp -r envs/env.prod.json envs/env.json"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
@@ -19,12 +21,14 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.21.3",
+    "@quasar/app-webpack": "3.7.2",
     "eslint": "8.26.0",
+    "eslint-config-prettier": "8.8.0",
+    "shx": "0.3.3",
     "eslint-plugin-vue": "9.6.0",
     "eslint-webpack-plugin": "3.2.0",
-    "eslint-config-prettier": "8.8.0",
     "prettier": "2.8.8",
-    "@quasar/app-webpack": "3.7.2"
+    "workbox-webpack-plugin": "^6.0.0"
   },
   "browserslist": [
     "last 10 Chrome versions",
