--- a/shared-context/shared-library/package.json
+++ b/shared-context/shared-library/package.json
@@ -2,8 +2,5 @@
   "name": "shared-context_shared-library",
   "version": "0.0.1",
   "private": true,
-  "main": "./src/index.js",
-  "peerDependencies": {
-    "react": "^16.13.0"
-  }
+  "main": "./src/index.js"
 }
