--- a/medusa-example/utils/package.json
+++ b/medusa-example/utils/package.json
@@ -12,7 +12,8 @@
     "webpack": "5.80.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.13.3",
-    "esbuild-loader": "2.20.0"
+    "esbuild-loader": "2.20.0",
+    "html-webpack-plugin": "5.3.1"
   },
   "scripts": {
     "start": "webpack-cli serve",
