--- a/basic-host-remote/app2/package.json
+++ b/basic-host-remote/app2/package.json
@@ -37,7 +37,7 @@
     "@modern-js/eslint-config": "2.32.0",
     "@modern-js/tsconfig":"2.32.0",
     "@modern-js-app/eslint-config": "2.32.0",
-    "lint-staged": "~13.1.0",
+    "lint-staged": "13.3.0",
     "prettier": "~2.8.1",
     "husky": "~8.0.1",
     "rimraf": "~3.0.2"
