--- a/angular11-microfrontends-scully/package.json
+++ b/angular11-microfrontends-scully/package.json
@@ -62,7 +62,7 @@
     "karma-coverage": "2.2.0",
     "karma-jasmine": "4.0.2",
     "karma-jasmine-html-reporter": "1.7.0",
-    "ng-packagr": "11.0.0-next.3",
+    "ng-packagr": "11.2.4",
     "ngx-build-plus": "10.1.1",
     "protractor": "7.0.0",
     "ts-node": "9.1.1",
