--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
       "./advanced-api/dynamic-remotes-synchronous-imports",
       "./advanced-api/dynamic-remotes-synchronous-imports/*",
       "./advanced-api/dynamic-remotes",
+      "./federated-css-react-ssr/*",
+      "./federated-css-react-ssr",
       "./advanced-api/dynamic-remotes/*",
       "./angular-universal-ssr",
       "./angular-universal-ssr/*",
@@ -147,6 +149,10 @@
       "./vue3-demo/*",
       "./modernjs",
       "./modernjs/*",
+      "./medusa-example",
+      "./medusa-example/*",
+      "./medusa-delegate-example",
+      "./medusa-delegate-example/*",
       "./modernjs-medusa",
       "./modernjs-medusa/*"
     ],
@@ -186,7 +192,6 @@
     "pretty-quick": "3.1.3",
     "wait-on": "7.0.1"
   },
-  
   "scripts": {
     "list:all": "node repotools.js",
     "list:changed": "node repotools.js --since=origin/master",
