--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -4,7 +4,7 @@ on: pull_request
 env:
   CACHE_PATH: |
     **/node_modules
-#    ~/.cache/Cypress
+    ~/.cache/Cypress
     ~/.cache/yarn/v6
   FILES_TO_DELETE: |
     sudo rm -rf "/usr/share/dotnet"
