--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -210,7 +210,7 @@ jobs:
           # TODO Uncomment when yarn will work properly from the root and install all nessessary deps. Also please, add yarn install to the run section below instead of npx lerna exec
         # if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: |
-          lerna exec --stream --scope="${{ matrix.container }}*" --concurrency=1 "yarn install"
+          lerna exec --stream --scope="${{ matrix.container }}*" --concurrency=1 "bun install"
 
       - name: Check disk space after install
         run: |
