--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -101,7 +101,6 @@ jobs:
       - name: Create matrix
         id: set-matrix
         run: |
-          npm install lerna@6 -g
           matrix="$(node checkChangedWorkspaces.js)"
           echo "matrix=$matrix" >> $GITHUB_OUTPUT
 
@@ -208,7 +207,7 @@ jobs:
           # TODO Uncomment when yarn will work properly from the root and install all nessessary deps. Also please, add yarn install to the run section below instead of npx lerna exec
         # if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: |
-          lerna exec --stream --scope="${{ matrix.container }}*" --concurrency=1 "yarn install"
+          npx lerna exec --stream --scope="${{ matrix.container }}*" --concurrency=1 "yarn install"
 
       - name: Check disk space after install
         run: |
@@ -222,9 +221,7 @@ jobs:
       - name: Run sample e2e tests
         run: |
           node -v
-          yarn add lerna@6 -W
-          yarn add lerna@6 -g
-          lerna run --scope=${{ matrix.container }} e2e:ci
+          npx lerna run --scope=${{ matrix.container }} e2e:ci
 
       - name: Create artifacts for Allure report
         uses: actions/upload-artifact@v3
