--- a/complete-react-case/package.json
+++ b/complete-react-case/package.json
@@ -18,6 +18,9 @@
     "url": "https://github.com/anderlaw/react-webpack-MF/issues"
   },
   "homepage": "https://github.com/anderlaw/react-webpack-MF#readme",
+  "resolutions": {
+    "webpack": "file:../../webpack"
+  },
   "devDependencies": {
     "concurrently": "7.6.0",
     "wait-on": "7.0.1"
