--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular11-microfrontends-ngxs",
     "angular11-microfrontends-scully",
     "angular12-microfrontends",
+    "umd-federation",
     "angular14-react",
     "angular14-react/*",
     "angular15-vue3/*",
