--- a/nextjs-ssr/package.json
+++ b/nextjs-ssr/package.json
@@ -8,7 +8,7 @@
     "shop"
   ],
   "scripts": {
-    "start": "pnpm --parallel --filter nextjs-ssr_* dev",
+    "start": "NEXT_PRIVATE_LOCAL_WEBPACK=true  pnpm --parallel --filter nextjs-ssr_* dev",
     "build": "pnpm --parallel --filter nextjs-ssr_* build",
     "serve": "pnpm --parallel --filter nextjs-ssr_* start",
     "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && wait-on http-get://localhost:3002/ && wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
