--- a/native-federation-react/package.json
+++ b/native-federation-react/package.json
@@ -11,11 +11,11 @@
   "scripts": {
     "build:remote": "tsc build/build-remote.ts --outDir dist && node dist/build-remote.js",
     "build:host": "tsc build/build-host.ts --outDir dist && node dist/build-host.js",
-    "build": "npm run build:remote && npm run build:host",
-    "start:remote": "serve dist/remote -l 3001 --cors",
-    "start:host": "serve dist/host -l 3000",
+    "build": "pnpm run build:remote && npm run build:host",
+    "start:remote": "pnpx serve dist/remote -l 3001 --cors",
+    "start:host": "pnpx serve dist/host -l 3000",
     "start": "concurrently \"npm run start:remote\" \"npm run start:host\"",
-    "e2e:ci": "npm run build && npm run start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm run build && pnpm run start & wait-on http-get://localhost:3000/ && pnpx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
   "keywords": [],
   "author": "",
