--- a/package.json
+++ b/package.json
@@ -179,10 +179,11 @@
     ]
   },
   "devDependencies": {
-    "asn1": "^0.2.6",
-    "abbrev": "^2.0.0",
     "@shelex/cypress-allure-plugin": "2.40.1",
+    "@types/node": "20.9.0",
+    "abbrev": "^2.0.0",
     "allure-commandline": "2.24.1",
+    "asn1": "^0.2.6",
     "concurrently": "7.6.0",
     "cross-env": "7.0.3",
     "cross-spawn": "7.0.3",
@@ -199,9 +200,9 @@
     "prettier": "2.8.8",
     "pretty-quick": "3.1.3",
     "serve": "14.2.1",
+    "typescript": "5.2.2",
     "wait-on": "7.2.0",
-    "@types/node": "20.9.0",
-    "typescript": "5.2.2"
+    "js-yaml": "^4.1.0"
   },
   "scripts": {
     "list:all": "pnpm list --filter \"*\" --only-projects --depth -1 --json",
