--- a/different-react-versions-16-17/package.json
+++ b/different-react-versions-16-17/package.json
@@ -1,9 +1,11 @@
 {
   "name": "different-react-versions-16-17",
-  "description": "This example demos the ability to load two separate versions of react.",
+  "description": "This example demos the ability to load two separate versions of react (16 & 17).",
   "version": "1.0.0",
   "scripts": {
     "start": "pnpm --filter different-react-versions-16-17_* --parallel start",
+    "legacy:start": "pnpm --filter different-react-versions-16-17_* --parallel legacy:start",
+    "legacy:build": "pnpm --filter different-react-versions-16-17_* legacy:build",
     "build": "pnpm --filter different-react-versions-16-17_* build",
     "serve": "pnpm --filter different-react-versions-16-17_* --parallel serve",
     "clean": "pnpm --filter different-react-versions-16-17_* --parallel clean"
