--- a/complete-react-case/component-app/package.json
+++ b/complete-react-case/component-app/package.json
@@ -7,7 +7,8 @@
     "build": "rspack build --config rspack.config.js ",
     "legacy:build": "webpack --config webpack.config.js --stats=minimal",
     "serve": "serve dist -p 3001",
-    "start": "concurrently \"npm run build\" \"npm run serve\""
+    "start": "concurrently \"npm run build\" \"npm run serve\"",
+    "legacy:start": "concurrently \"npm run legacy:build\" \"npm run serve\""
   },
   "keywords": [],
   "author": "",
