--- a/comprehensive-demo-react18/app-01/package.json
+++ b/comprehensive-demo-react18/app-01/package.json
@@ -6,8 +6,13 @@
   "dependencies": {
     "@babel/core": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
-    "@module-federation/enhanced": "^0.0.0-next-20240330232226",
     "@material-ui/core": "^4.12.4",
+    "@module-federation/enhanced": "^0.0.0-next-20240330232226",
+    "@module-federation/runtime": "^0.0.0-next-20240330232226",
+    "@module-federation/sdk": "^0.0.0-next-20240330232226",
+    "@rspack/cli": "^0.5.0",
+    "@rspack/core": "^0.5.0",
+    "@rspack/dev-server": "^0.5.0",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.6.0",
     "markdown-to-jsx": "^7.3.2",
@@ -16,18 +21,15 @@
     "react-router-dom": "^5.1.2",
     "serve": "^14.2.1",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "@rspack/core": "^0.5.0",
-    "@rspack/cli": "^0.5.0",
-    "@rspack/dev-server": "^0.5.0"
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production rspack build --mode production",
     "legacy:build": "cross-env NODE_ENV=production webpack --mode production",
     "start": "rspack --watch",
-    "legacy:start": "webpack --watch",
+    "legacy:start": "webpack",
     "dev": "rspack serve",
-    "legacy:dev": "webpack-dev-server --content-base public",
+    "legacy:dev": "webpack serve --port=3001",
     "serve": "serve dist -p 3001",
     "clean": "rm -rf dist"
   },
