--- a/comprehensive-demo-react18/package.json
+++ b/comprehensive-demo-react18/package.json
@@ -13,6 +13,8 @@
     "legacy:e2e:ci": "pnpm legacy:start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
+    "@rsdoctor/rspack-plugin": "^0.1.8",
+    "@rsdoctor/webpack-plugin": "^0.1.8",
     "concurrently": "8.2.2",
     "wait-on": "7.2.0"
   }
