--- a/shared-routing/order/package.json
+++ b/shared-routing/order/package.json
@@ -23,6 +23,7 @@
     "history": "^5.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-router": "^5.1.2"
+    "react-router": "^5.1.2",
+    "prop-types": "^15.8.1"
   }
 }
