--- a/shared-routing/profile/package.json
+++ b/shared-routing/profile/package.json
@@ -28,6 +28,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router": "6.3.0",
+    "prop-types": "^15.8.1",
     "react-router-dom": "6.3.0",
     "recharts": "1.8.5"
   }
