--- a/shared-routing/sales/package.json
+++ b/shared-routing/sales/package.json
@@ -23,6 +23,7 @@
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
     "events": "^3.1.0",
+    "prop-types": "^15.8.1",
     "history": "^5.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
