--- a/shared-routing/shell/package.json
+++ b/shared-routing/shell/package.json
@@ -24,6 +24,7 @@
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
     "history": "^5.0.0",
+    "prop-types": "^15.8.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router": "6.3.0",
