--- a/remix/app2/package.json
+++ b/remix/app2/package.json
@@ -22,7 +22,9 @@
     "esbuild-loader": "^4.0.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "@module-federation/node": "^2.1.1",
+    "@module-federation/enhanced": "^0.1.1"
   },
   "dependencies": {
     "cors": "2.8.5",
