--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,7 @@ packages:
   - '**/**'
   - '!docs'
   - '!cypress'
+  - '!remix/*'
   - '!angular14-react/*'
   - '!test'
   - '!multi-threaded-ssr/website2'
