--- a/comprehensive-demo-react18/app-01/package.json
+++ b/comprehensive-demo-react18/app-01/package.json
@@ -7,9 +7,6 @@
     "@babel/core": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
     "@material-ui/core": "^4.12.4",
-    "@module-federation/enhanced": "^0.0.0-next-20240402175026",
-    "@module-federation/runtime": "^0.0.0-next-20240402175026",
-    "@module-federation/sdk": "^0.0.0-next-20240402175026",
     "@rspack/cli": "^0.5.0",
     "@rspack/core": "^0.5.0",
     "@rspack/dev-server": "^0.5.0",
@@ -34,6 +31,9 @@
     "clean": "rm -rf dist"
   },
   "devDependencies": {
-    "raw-loader": "4.0.2"
+    "raw-loader": "4.0.2",
+    "@module-federation/enhanced": "^0.0.0-next-20240402175026",
+    "@module-federation/runtime": "^0.0.0-next-20240402175026",
+    "@module-federation/sdk": "^0.0.0-next-20240402175026"
   }
 }
