--- a/react-18-code-splitting/app2/package.json
+++ b/react-18-code-splitting/app2/package.json
@@ -6,7 +6,7 @@
     "serve": "node dist/server/main.js",
     "build": "pnpm build:server && pnpm build:client",
     "build:client": "rimraf dist/client && webpack --mode production --progress --config config/webpack.client.js",
-    "build:server": "rimraf dist/server && webpack --mode production --progress --config config/webpack.server.js"
+    "build:server": "rimraf dist/server && webpack --mode development --progress --config config/webpack.server.js"
   },
   "dependencies": {
     "express": "4.18.2",
@@ -16,7 +16,7 @@
     "regenerator-runtime": "0.14.1"
   },
   "devDependencies": {
-    "@babel/core": "7.24.3",
+    "@babel/core": "7.24.4",
     "@babel/node": "7.23.9",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/polyfill": "7.12.1",
