--- a/comprehensive-demo-react18/app-01/package.json
+++ b/comprehensive-demo-react18/app-01/package.json
@@ -36,6 +36,6 @@
     "raw-loader": "4.0.2",
     "@module-federation/enhanced": "^0.1.3",
     "@module-federation/runtime": "^0.1.3",
-    "@module-federation/sdk": "^0.0.0-next-20240409213838"
+    "@module-federation/sdk": "^0.1.3"
   }
 }
