--- a/comprehensive-demo-react18/app-04/package.json
+++ b/comprehensive-demo-react18/app-04/package.json
@@ -4,21 +4,23 @@
   "version": "1.0.0",
   "ignored": true,
   "devDependencies": {
+    "@module-federation/enhanced": "^0.1.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@rspack/cli": "^0.5.6",
+    "@rspack/core": "^0.5.6",
+    "@rspack/dev-server": "^0.5.6",
     "cross-env": "7.0.3",
     "css-loader": "6.10.0",
+    "html-webpack-plugin": "5.6.0",
     "mini-css-extract-plugin": "^2.8.1",
-    "@module-federation/enhanced": "^0.0.0-next-20240330232226",
+    "react-refresh": "^0.14.0",
+    "serve": "14.2.1",
     "style-loader": "3.3.4",
     "svelte": "3.59.2",
     "svelte-loader": "3.1.9",
-    "html-webpack-plugin": "5.6.0",
     "webpack": "^5.91.0",
     "webpack-cli": "5.1.4",
-    "webpack-dev-server": "4.15.1",
-    "serve": "14.2.1",
-    "@rspack/core": "^0.5.6",
-    "@rspack/cli": "^0.5.6",
-    "@rspack/dev-server": "^0.5.6"
+    "webpack-dev-server": "4.15.1"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production rspack build --mode production",
@@ -26,7 +28,7 @@
     "start": "rspack serve",
     "legacy:start": "webpack --watch",
     "dev": "rspack serve",
-    "legacy:dev": "webpack-dev-server --content-base public",
+    "legacy:dev": "webpack serve --port=3004",
     "serve": "serve public -p 3004",
     "clean": "rm -rf dist"
   }
