--- a/different-react-versions-typescript/package.json
+++ b/different-react-versions-typescript/package.json
@@ -13,8 +13,8 @@
     "legacy:build": "pnpm --filter different-react-versions-typescript_* legacy:build",
     "serve": "pnpm --filter different-react-versions-typescript_* --parallel serve",
     "clean": "pnpm --filter different-react-versions-typescript_* --parallel clean",
-    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ &&  npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome",
-    "legacy:e2e:ci": "pnpm legacy:start & wait-on http-get://localhost:3001/ &&  npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && wait-on http-get://localhost:3002/ &&  npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome",
+    "legacy:e2e:ci": "pnpm legacy:start & wait-on http-get://localhost:3001/ && wait-on http-get://localhost:3002/ &&  npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.2.0"
