--- a/rspack-webpack-interop/app-02/package.json
+++ b/rspack-webpack-interop/app-02/package.json
@@ -13,9 +13,9 @@
     "serve": "^14.2.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "@rspack/core": "^0.5.0",
-    "@rspack/cli": "^0.5.0",
-    "@rspack/dev-server": "^0.5.0"
+    "@rspack/core": "0.6.2-canary-796c734-20240418055822",
+    "@rspack/cli": "0.6.2-canary-796c734-20240418055822",
+    "@rspack/dev-server": "0.6.2-canary-796c734-20240418055822"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production rspack build --mode production",
