--- a/simple-node/node-host/package.json
+++ b/simple-node/node-host/package.json
@@ -12,8 +12,8 @@
     "webpack": "^5.91.0",
     "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^4.0.0",
-    "@rspack/cli": "0.6.1",
-    "@rspack/core": "0.6.1",
-    "@rspack/dev-server": "0.6.1"
+    "@rspack/core": "0.6.2-canary-796c734-20240418055822",
+    "@rspack/cli": "0.6.2-canary-796c734-20240418055822",
+    "@rspack/dev-server": "0.6.2-canary-796c734-20240418055822"
   }
 }
