--- a/simple-node/node-remote/package.json
+++ b/simple-node/node-remote/package.json
@@ -6,14 +6,14 @@
     "start": "rspack serve --config rspack.config.js"
   },
   "dependencies": {
-    "@module-federation/node": "^0.0.0-next-20240417205114"
+    "@module-federation/node": "^0.0.0-next-20240418224727"
   },
   "devDependencies": {
     "webpack": "^5.91.0",
     "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^4.0.0",
-    "@rspack/cli": "0.5.9",
-    "@rspack/core": "0.5.9",
-    "@rspack/dev-server": "0.5.9"
+    "@rspack/core": "0.6.2-canary-796c734-20240418055822",
+    "@rspack/cli": "0.6.2-canary-796c734-20240418055822",
+    "@rspack/dev-server": "0.6.2-canary-796c734-20240418055822"
   }
 }
