--- a/simple-node/node-local-remote/package.json
+++ b/simple-node/node-local-remote/package.json
@@ -5,10 +5,10 @@
     "start:legacy": "webpack serve --config webpack.config.js",
     "start": "rspack serve --config rspack.config.js"
   },
-  "dependencies": {
-    "@module-federation/node": "^0.0.0-next-20240418224727"
-  },
+
   "devDependencies": {
+    "@module-federation/node": "^0.0.0-next-20240418224727",
+    "@module-federation/enhanced": "^0.0.0-next-20240418224727",
     "webpack": "^5.91.0",
     "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^4.0.0",
