--- a/apollo-client/package.json
+++ b/apollo-client/package.json
@@ -3,9 +3,17 @@
   "description": "This example demonstrates using Apollo Client with Module Federation.",
   "version": "0.0.0",
   "scripts": {
+    "start:legacy": "pnpm --filter apollo-client_* --parallel start:legacy",
+    "serve:legacy": "pnpm --filter apollo-client_* --parallel serve",
+    "build:legacy": "pnpm --filter apollo-client_* --parallel build:legacy",
     "start": "pnpm --filter apollo-client_* --parallel start",
     "serve": "pnpm --filter apollo-client_* --parallel serve",
     "build": "pnpm --filter apollo-client_* --parallel build",
-    "e2e:ci": "pnpm run build"
+    "e2e:ci": "kill-port 3001 3000 && pnpm build && pnpm serve & sleep 2 && wait-on tcp:3000 && wait-on tcp:3001 && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome",
+    "e2e:ci:legacy": "kill-port 3001 3000 && pnpm build:legacy && pnpm serve:legacy & sleep 5 && wait-on tcp:3000 && wait-on tcp:3001 && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+  },
+  "devDependencies": {
+    "wait-on": "^7.2.0",
+    "kill-port": "^2.0.1"
   }
 }
