--- a/loadable-react-16/package.json
+++ b/loadable-react-16/package.json
@@ -7,6 +7,10 @@
     "build": "pnpm --filter loadable-react-16_* build",
     "serve": "pnpm --filter loadable-react-16_* --parallel serve",
     "clean": "pnpm --filter loadable-react-16_* --parallel clean",
-    "e2e:ci": "pnpm start & sleep 20 && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome && lsof -ti tcp:3000,3001,3002 | xargs kill"
+    "e2e:ci": "kill-port 3000 3001 && pnpm start & sleep 3 && wait-on tcp:3001 && wait-on tcp:3000 && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome && lsof -ti tcp:3000,3001,3002 | xargs kill"
+  },
+  "devDependencies": {
+    "kill-port": "^2.0.1",
+    "wait-on": "^7.2.0"
   }
 }
