--- a/dynamic-system-host/app1/package.json
+++ b/dynamic-system-host/app1/package.json
@@ -4,9 +4,9 @@
   "devDependencies": {
     "@babel/core": "7.24.3",
     "@babel/preset-react": "7.23.3",
-    "@rspack/cli": "0.5.9",
-    "@rspack/core": "0.5.9",
-    "@rspack/dev-server": "0.5.9",
+    "@rspack/cli": "^0.6.2",
+    "@rspack/core": "^0.6.2",
+    "@rspack/dev-server": "^0.6.2",
     "@module-federation/enhanced": "^0.1.8",
     "babel-loader": "8.2.5",
     "html-webpack-plugin": "5.6.0",
