--- a/federated-npm/app1/package.json
+++ b/federated-npm/app1/package.json
@@ -12,9 +12,9 @@
     "webpack-dev-server": "4.15.1",
     "@module-federation/enhanced": "^0.1.8",
     "@module-federation/runtime": "^0.1.8",
-    "@rspack/cli": "0.5.9",
-    "@rspack/core": "0.5.9",
-    "@rspack/dev-server": "0.5.9"
+    "@rspack/cli": "^0.6.2",
+    "@rspack/core": "^0.6.2",
+    "@rspack/dev-server": "^0.6.2"
   },
   "scripts": {
     "start": "rspack serve",
