--- a/federated-npm/app3/package.json
+++ b/federated-npm/app3/package.json
@@ -10,9 +10,9 @@
     "webpack": "^5.91.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.15.1",
-    "@rspack/cli": "0.5.9",
-    "@rspack/core": "0.5.9",
-    "@rspack/dev-server": "0.5.9",
+    "@rspack/cli": "^0.6.2",
+    "@rspack/core": "^0.6.2",
+    "@rspack/dev-server": "^0.6.2",
     "@module-federation/enhanced": "^0.1.8"
   },
   "scripts": {
