--- a/simple-node/node-host/package.json
+++ b/simple-node/node-host/package.json
@@ -7,12 +7,12 @@
   },
   "devDependencies": {
     "@module-federation/node": "^2.2.0",
-    "@module-federation/enhanced": "^0.0.0-next-20240418224727",
+    "@module-federation/enhanced": "^0.1.9",
     "webpack": "^5.91.0",
     "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^4.0.0",
-    "@rspack/core": "0.6.2-canary-796c734-20240418055822",
-    "@rspack/cli": "0.6.2-canary-796c734-20240418055822",
-    "@rspack/dev-server": "0.6.2-canary-796c734-20240418055822"
+    "@rspack/core": "^0.6.2",
+    "@rspack/cli": "^0.6.2",
+    "@rspack/dev-server": "^0.6.2"
   }
 }
