--- a/simple-node/node-host/package.json
+++ b/simple-node/node-host/package.json
@@ -2,14 +2,17 @@
   "name": "node-host-1234",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js"
-  },
-  "dependencies": {
-    "@module-federation/node": "^2.2.0"
+    "start:legacy": "webpack serve --config webpack.config.js",
+    "start": "rspack serve --config rspack.config.js"
   },
   "devDependencies": {
+    "@module-federation/node": "^2.2.0",
+    "@module-federation/enhanced": "^0.1.9",
     "webpack": "^5.91.0",
     "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^4.0.0"
+    "webpack-dev-server": "^4.0.0",
+    "@rspack/core": "^0.6.2",
+    "@rspack/cli": "^0.6.2",
+    "@rspack/dev-server": "^0.6.2"
   }
 }
